# school-of-solana

./: .gitignore  README.md
program-SandroAugusto/: PROJECT_DESCRIPTION.md
program-SandroAugusto/anchor_project/: Anchor.toml  Cargo.toml  package.json  test.json  tsconfig.json
program-SandroAugusto/anchor_project/programs/market/: Cargo.toml
program-SandroAugusto/anchor_project/programs/market/src/: constants.rs  errors.rs  lib.rs
program-SandroAugusto/anchor_project/programs/market/src/instructions/: close_market.rs  initialize_market.rs  mod.rs  place_bet.rs  resolve_market.rs  withdraw_winnings.rs
program-SandroAugusto/anchor_project/programs/market/src/state/: bet.rs  market.rs  mod.rs
program-SandroAugusto/anchor_project/tests/: initialize_market.spec.ts  market.spec.ts  place_bet.spec.ts  resolve_market.spec.ts  withdraw_winnings.spec.ts
program-SandroAugusto/anchor_project/tests/helpers/: setup.ts
program-SandroAugusto/frontend/: README.md
program-SandroAugusto/frontend/market-prediction/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
program-SandroAugusto/frontend/market-prediction/src/: app.tsx  index.css  main.tsx
program-SandroAugusto/frontend/market-prediction/src/anchor/: program.ts
program-SandroAugusto/frontend/market-prediction/src/components/: app-header.tsx
program-SandroAugusto/frontend/market-prediction/src/idl/: constants.ts  prediction_market.json
program-SandroAugusto/frontend/market-prediction/src/lib/: SolanaProvider.tsx  pdas.ts
task2-SandroAugusto/src/: calculator.rs  shapes.rs
(+11 files in other folders)
